--- a/public/style.css
+++ b/public/style.css
@@ -45,8 +45,6 @@ nav a{
 
 .hero--section{
     padding-left: 80px;
-
-
     font-weight: bold;
 }
 /*
@@ -86,11 +84,13 @@ nav a{
     margin: 0 auto;
     width: 600px;
 
+
 }
 .main--logo{
-    margin-left: 80px;
     font-size: 50px;
     transition: 0.5s;
+    margin: 300px 225px 70px;
+
 }
 .main--logo:hover{
     transform: scale(1.1);
