--- a/public/style.css
+++ b/public/style.css
@@ -4,6 +4,27 @@
     padding: 0;
 }
 
+::-webkit-scrollbar{
+    width: 1vw;
+}
+::-webkit-scrollbar-thumb{
+    background-color: #555;
+    border-radius: 100vw;
+}
+::-webkit-scrollbar-thumb:hover{
+    background-color: rgb(117, 117, 117);
+}
+@supports (scrollbar-color: red blue){
+    * {
+        scrollbar-color: #777 #555;
+        scrollbar-width: normal;
+    }
+}
+/*
+html::-webkit-scrollbar-track{
+    background-color: #777;
+}*/
+
 /*---- Navbar ----*/
 
 nav {
@@ -125,7 +146,16 @@ nav a{
 }
 .mention{
     display: flex;
-    align-items: center;
     justify-content: center;
-
+    padding-bottom: 30px;
 }
+.contact--footbar{
+    display: flex;
+    justify-content: space-between;
+    margin: 600px 50px 50px 50px;
+}
+.footer-item{
+    display: flex;
+    flex-direction: column;
+}
+
