--- a/public/style.css
+++ b/public/style.css
@@ -4,8 +4,10 @@
     padding: 0;
 }
 
+/* Scroll bar custom : Default*/
+
 ::-webkit-scrollbar{
-    width: 1vw;
+    width: 0.5vw;
 }
 ::-webkit-scrollbar-thumb{
     background-color: #555;
@@ -14,16 +16,15 @@
 ::-webkit-scrollbar-thumb:hover{
     background-color: rgb(117, 117, 117);
 }
+
+/* Scroll bar custom : Firefox */
+
 @supports (scrollbar-color: red blue){
     * {
         scrollbar-color: #777 #555;
         scrollbar-width: normal;
     }
 }
-/*
-html::-webkit-scrollbar-track{
-    background-color: #777;
-}*/
 
 /*---- Navbar ----*/
 
@@ -39,7 +40,7 @@ nav {
     background-color: #ffffff;
     align-items: center;
     padding: 50px;
-    padding-left: 80px;
+    padding-left: 200px;
     font-family: 'Inter', sans-serif;
     opacity: 0.8;
 }
@@ -62,7 +63,9 @@ nav {
 nav a{
     color: rgb(0, 0, 0);
     text-decoration: none;
+
 }
+/* About */
 
 .hero--section{
     padding-left: 80px;
@@ -148,14 +151,37 @@ nav a{
     display: flex;
     justify-content: center;
     padding-bottom: 30px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 .contact--footbar{
     display: flex;
+    font-family: 'Courier New', Courier, monospace;
     justify-content: space-between;
-    margin: 600px 50px 50px 50px;
+    padding-top: 600px;
+    padding-left: 300px;
+    padding-right: 300px;
+    padding-bottom: 70px;
+    font-size: 17px;
 }
-.footer-item{
+
+.footer-item_l > a{
     display: flex;
     flex-direction: column;
+    text-decoration: none;
+    margin-bottom: 10px;
+    color: rgb(0, 0, 0);
+    font-family: 'Courier New', Courier, monospace;
+}
+.footer-item_r > a{
+    display: flex;
+    flex-direction: column;
+    text-decoration: none;
+    margin-bottom: 10px;
+    color: rgb(0, 0, 0);
+    font-family: 'Courier New', Courier, monospace;
+}
+.footer-title{
+    font-weight: bold;
+    padding-bottom: 15px;
 }
 
