--- a/public/style.css
+++ b/public/style.css
@@ -192,22 +192,106 @@ nav a:hover{
 .active{
     color: rgb(99, 99, 99);
 }
+main {
+    text-align: center;
+  }
+  
+  main h1 {
+    padding: 30px 20px 20px;
+    font-size: 24px;
+  }
+  
+  main .form i:hover {
+    cursor: pointer;
+  }
+  
+  main .form input {
+    padding: 10px;
+    margin: 0 0 30px 10px;
+    border: 2px solid #0e1238;
+    border-radius: 5px;
+    font-family: 'Roboto Slab', sans-serif;
+  }
+  
+  main .form input::placeholder {
+    font-family: 'Roboto Slab', sans-serif;
+  }
+  
+  .container h3 {
+    padding: 0 0 30px 30px;
+  }
+  
+  /* Cards */
+  .cards {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 40px;
+    padding: 0 30px 50px;
+  }
+  
+  .cards .cards-inner {
+    display: flex;
+    background-color: #d1d2d3;
+    padding: 20px;
+    border-radius: 5px;
+    transition: box-shadow 0.4s;
+  }
+  
+  .cards .cards-inner:hover {
+    box-shadow: 0 5px 20px rgba(1, 45, 128, 0.5);
+  }
+  
+  .cards .cards-inner div i {
+    margin-right: 20px;
+    font-size: 24px;
+  }
+  
+  .cards .cards-inner div p {
+    margin-top: 20px;
+    line-height: 1.6;
+    font-size: 14px;
+  }
+  
+  @media (min-width: 600px) {
+    main h1 {
+      max-width: 500px;
+      margin: auto;
+    }
+  
+    .cards {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+  
+  @media (min-width: 912px) {
+    .cards {
+      grid-template-columns: repeat(3, 1fr);
+    }
+  }
+  
+  @media (min-width: 1200px) {
+    .container {
+      max-width: 1100px;
+      margin: auto;
+    }
+  }
 .card--work{
     margin: 100px;
     border: 2px solid rgb(0, 0, 0);
     border-radius: 3px;
-    display: flex;
+    display: grid;
+    grid-template-columns: 1125px 100px;
+    grid-template-rows: 125px;
+}
+.logo-image{
 
 }
 .card--info{
     background-color: rgb(155, 131, 131);
 }
 .card--work img{
-    width: 10%;
-    justify-content: left;
+    width: 100px;
     background-color: black;
-    align-items: flex-start;
-    justify-content: flex-start;
 }
 .hero--work{
     padding-top: 120px;
