--- a/public/index.css
+++ b/public/index.css
@@ -1,10 +1,12 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 *{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 
 }
-
 /* Scroll bar custom : Default*/
 
 ::-webkit-scrollbar{
@@ -263,8 +265,33 @@ nav a:hover{
 .hero--work div button{
     padding: 6 237 6 230;
 }
+.css-1qm7jzg{
+    display: inline-flex;
+    vertical-align: top;
+    -webkit-box-align: center;
+    align-items: center;
+    max-width: 100%;
+    font-weight: 400;
+    line-height: 1.2;
+    outline: 0px;
+    min-height: 1.25rem;
+    min-width: 1.25rem;
+    font-size: small;
+    padding-inline-start: 6px;
+    padding-inline-end: 6px;
+    border-radius: 3px;
+    background: rgba(254, 178, 178, 0.16);
+    color: rgb(228, 103, 103);
+    overflow: hidden;
+    text-overflow: none
 
-
+}
+.css-1h8gyx6{
+    line-height: 1.2;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
 @media (min-width: 912px) {
   .cards {
     grid-template-columns: repeat(3, 1fr);
