--- a/public/index.css
+++ b/public/index.css
@@ -1,11 +1,99 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 *{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 
+}
+.resume--container{
+    margin-top: 100px;
+}
+.contain-wrapper{
+    height: 100%;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+.wrapper{
+    display: flex;
+    justify-content: space-around;
+}
+.card{
+    width: 400px;
+    height: 360px;
+    padding: 2rem 1rem;
+    position: relative;
+    display: flex;
+    align-items: flex-end;
+    box-shadow: 0px 7px 10px rgba(0,0,0,0.5);
+    transition: 0.5s ease-in-out;
+}
+
+.card:hover{
+    transform: translateY(20px);
+}
+.card:before{
+    content: "";
+    position: absolute;
+    top:0;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to bottom, rgba(0,176,155,0.5), rgba(0,201,61,1));
+    z-index: 2;
+    transition: 0.5s all;
+    opacity: 0;
+}
+.card:hover:before{
+    opacity: 1;
+}
+.card img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.card .info{
+    position: relative;
+    z-index: 3;
+    color: #ffffff;
+    opacity: 0;
+    transform: translateY(30px);
+    transition: 0.5s all;
+}
+.card:hover .info{
+    opacity: 1;
+    transform: translateY(0px);
+}
+.card .info h1{
+    margin: 0;
+}
+.card .info p{
+    letter-spacing: 1px;
+    font-size: 15px;
+    margin-top: 8px;
+    margin-bottom: 20px;
+}
+
+.card .info .btn{
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+    background: #ffffff;
+    color: #000;
+    font-size: 14px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: 0.4s ease-in-out;
+}
+.card .info .btn:hover{
+    box-shadow: 0px 7px 10px rgba(0,0,0,0.5);
 }
 /* Scroll bar custom : Default*/
 
@@ -38,7 +126,7 @@ nav {
     left: 0;
     right: 0;
     width: 100%;
-    height: 20px;
+    height: 15px;
     justify-content: space-between;
     background-color: #ffffff;
     align-items: center;
@@ -110,7 +198,8 @@ nav a{
 
 }
 .main--logo{
-    font-size: 50px;
+    height: 150px;
+    font-size: 20px;
     transition: 0.5s;
     margin: 30% 37% 17%;;
 
@@ -126,7 +215,7 @@ nav a{
 .hero--sp{
     max-width: 700px;
 }
-.card{
+.card-work{
     margin-top: 150px;
     display: flex;
     align-items: center;
