--- a/public/index.css
+++ b/public/index.css
@@ -6,22 +6,67 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-
 }
 .resume--container{
     margin-top: 100px;
 }
+.a-btn-gh{
+    margin: auto;
+    margin-top: 80px;
+    width: 65%;
+}
+.btn-gh{
+    margin: auto;
+    width: 100%; 
+    padding: 10px;
+    border: none;
+    color: white;
+    font-weight: bold;
+    background-color: rgb(35, 33, 33);
+}
+.btn-gh:hover{
+    background-color: rgb(60, 60, 60);
+}
+
+.main-title-project{
+    margin-top: 120px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
 .contain-wrapper{
     height: 100%;
     width: 100%;
+    max-width: 1300px;
+    margin: 10px auto 0;
     justify-content: center;
     align-items: center;
     display: flex;
+    flex-wrap: wrap;
 }
+.title{
+    font-size: xx-large;
+}
+.p1{
+    margin: 5px;
+    font-size: large;
+}
+.p2{
+    font-weight:500;
+    font-size: small;
+    color: #777;
+}
+
 .wrapper{
+    margin-top: 200px;
+    width: 400px;
     display: flex;
+    margin: 10px;
     justify-content: space-around;
+    overflow: hidden;
 }
+
 .card{
     width: 400px;
     height: 360px;
@@ -33,9 +78,6 @@
     transition: 0.5s ease-in-out;
 }
 
-.card:hover{
-    transform: translateY(20px);
-}
 .card:before{
     content: "";
     position: absolute;
@@ -44,7 +86,7 @@
     display: block;
     width: 100%;
     height: 100%;
-    background: linear-gradient(to bottom, rgba(0,176,155,0.5), rgba(0,201,61,1));
+    background: linear-gradient(to bottom, rgba(167, 165, 165, 0.5), rgb(0, 0, 0));
     z-index: 2;
     transition: 0.5s all;
     opacity: 0;
@@ -192,7 +234,7 @@ nav a{
     transition: 1s;
 }
 .hero--p{
-    font-family: "Poppins",sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin: 0 auto;
     width: 600px;
 
@@ -225,7 +267,7 @@ nav a{
     padding-top: 300px;
     padding-left: 80px;
     font-weight: bold;
-    font-family: "Poppins",sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 90;
 }
 .project--img{
@@ -243,9 +285,9 @@ nav a{
 }
 .contact--footbar{
     display: flex;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     justify-content: space-between;
-    padding-top: 600px;
+    padding-top: 300px;
     padding-left: 300px;
     padding-right: 300px;
     padding-bottom: 70px;
@@ -411,6 +453,8 @@ nav a:hover{
     padding-top: 120px;
     display: grid;
     place-items: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
 }
 .hero--work *{
     padding-bottom: 20px;
