--- a/public/index.css
+++ b/public/index.css
@@ -6,6 +6,8 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    text-decoration: none;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .resume--container{
     margin-top: 100px;
