--- a/public/index.css
+++ b/public/index.css
@@ -224,6 +224,7 @@ nav {
     width: 100%;
     height: 15px;
     justify-content: space-between;
+    font-size: 18px;
     background-color: var(--primary-color);
     align-items: center;
     padding: 40px 5%;
@@ -249,7 +250,6 @@ nav a{
 /* About */
 
 .hero--section{
-    padding-left: 80px;
     font-weight: bold;
     color: var(--secondary-color);
 }
@@ -293,7 +293,6 @@ nav a{
     font-size: 20px;
     transition: 0.5s;
     margin: 30% 37% 17%;;
-
 }
 
 .main--logo:hover{
@@ -371,6 +370,7 @@ nav a{
 }
 .footer-title{
     font-weight: bold;
+    font-size:larger;
     padding-bottom: 15px;
     color: var(--secondary-color);
 }
