--- a/public/index.css
+++ b/public/index.css
@@ -39,6 +39,8 @@ cursor: pointer;
 }
 body{
     background-color: var(--primary-color);
+    margin: 0;
+    padding: 0;
 }
 
 .resume--container{
@@ -303,20 +305,9 @@ nav a{
 .hero--section{
     font-weight: bold;
     color: var(--secondary-color);
-}
-/*
-.hero--img{
-    width: 700px;
-    height: 500px;
-    margin-left: 400px;
-    transition: 0.5s;
+
 }
 
-.hero--img:hover{
-    transform: scale(1.1);
-    z-index: 2;
-}
-*/
 .list--arrangment{
     margin: auto;
     width: 40%;
